[gd_scene load_steps=2 format=3 uid="uid://8pxthk0m40qn"]

[ext_resource type="Script" path="res://Scripts/map_select.gd" id="1_4ih2g"]

[node name="MapSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 7.0
offset_right = 5.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ih2g")

[node name="Map1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -237.5
offset_top = 150.0
offset_right = 237.5
offset_bottom = 329.0
grow_horizontal = 2
text = "Map 1
"

[node name="Map2" type="Button" parent="."]
layout_mode = 0
offset_left = 1055.0
offset_top = 598.0
offset_right = 1530.0
offset_bottom = 777.0
text = "Map 2
"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -237.0
offset_top = -401.0
offset_right = 237.0
offset_bottom = -223.0
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[connection signal="pressed" from="Map1" to="." method="_on_Map1_button_pressed"]
[connection signal="pressed" from="Map2" to="." method="onMap2Pressed"]
[connection signal="pressed" from="Back" to="." method="_on_map_2_pressed"]
